[gd_scene load_steps=2 format=3 uid="uid://snk8adj7pdhi"]

[ext_resource type="Script" path="res://src/Extensions/ExtensionCreator/elements/NewExtension.gd" id="1"]

[node name="NewExtension" type="ConfirmationDialog"]
size = Vector2i(640, 363)
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -49.0

[node name="PanelContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TemplateManager" type="PanelContainer" parent="VBoxContainer/PanelContainer"]
self_modulate = Color(0.352941, 0.352941, 0.352941, 1)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TemplateManager"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Templates"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TemplateList" type="VBoxContainer" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="BARE_MINIMUM" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList" groups=["Common"]]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains Only the necessary things and nothing else"
disabled = true
text = "Bare Minimum"

[node name="ADD_PANNEL" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains some intuitive code
describing how to add a new panel"
text = "Add New Panel"

[node name="ADD_MENU_ITEM" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains some code
describing how to add new menu items in Top Menu."
text = "Add Menu Items"

[node name="ADD_THEME" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains some intuitive code
describing how to potentially add your own themes"
text = "Add Theme"

[node name="PROJECT_MANIPULATOR" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains some intuitive code
describing how to
Add frames, layers and such"
text = "Project Manipulator"

[node name="NEW_EXPORTER" type="Button" parent="VBoxContainer/PanelContainer/TemplateManager/VBoxContainer/ScrollContainer/TemplateList"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
tooltip_text = "Contains some code
describing how to add your own custom exporters"
text = "Custom Exporter"

[node name="ExtensionJsonOptions" type="GridContainer" parent="VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name:"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name of Extension"

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Display Name:"

[node name="DisplayNameEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Name visible to user"

[node name="Label3" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "What does this extension do?"

[node name="Label4" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Author:"

[node name="AuthorEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Your own name?"

[node name="Label5" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "License:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "MIT, etc..."

[node name="Label6" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Version:"

[node name="Version" type="SpinBox" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 1000.0
step = 0.001
value = 0.1
allow_greater = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
layout_mode = 2

[node name="Label7" type="Label" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Target Api For:"

[node name="Api" type="OptionButton" parent="VBoxContainer/PanelContainer/ExtensionJsonOptions"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Save" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Save"]
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
size_flags_vertical = 8
text = "Save Path:"

[node name="path" type="LineEdit" parent="VBoxContainer/Save"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
editable = false

[node name="Choose" type="Button" parent="VBoxContainer/Save"]
layout_mode = 2
size_flags_vertical = 8
text = "Choose?"

[node name="FileDialog" type="FileDialog" parent="."]
mode = 2
title = "Open a Directory"
size = Vector2i(651, 449)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="Error" type="AcceptDialog" parent="."]
size = Vector2i(232, 100)
dialog_text = "Error: Directory not created"

[connection signal="about_to_popup" from="." to="." method="_on_NewExtension_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_NewExtension_confirmed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/NameEdit" to="." method="_on_Name_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/DisplayNameEdit" to="." method="_on_DisplayName_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/DescriptionEdit" to="." method="_on_Description_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/AuthorEdit" to="." method="_on_Author_text_changed"]
[connection signal="text_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/LineEdit" to="." method="_on_License_text_changed"]
[connection signal="value_changed" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Version" to="." method="_on_Version_value_changed"]
[connection signal="item_selected" from="VBoxContainer/PanelContainer/ExtensionJsonOptions/Api" to="." method="_on_Target_Api_selected"]
[connection signal="pressed" from="VBoxContainer/Save/Choose" to="." method="_on_Choose_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
